<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.WallpaperDetail">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.multistate.view.MultiStateView
        android:id="@+id/multiStateView"
        style="@style/MultiStateStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp">

            <ImageView
                android:id="@+id/detail_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_alignParentBottom="true"
                android:background="@color/half_transparent"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.xieaoze.novawallpaper.widget.FancyButton
                        android:id="@+id/btn_download"
                        android:layout_width="@dimen/btn_width"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        fancy:fb_defaultColor="@color/colorPrimary"
                        fancy:fb_focusColor="#2e5071"
                        fancy:fb_fontIconResource="@string/icon_save"
                        fancy:fb_fontIconSize="30dp"
                        fancy:fb_iconPaddingLeft="15dp"
                        fancy:fb_iconPosition="right"
                        fancy:fb_radius="10dp"
                        fancy:fb_text="@string/download"
                        fancy:fb_textColor="#ffffff"
                        fancy:fb_textFontRes="@font/roboto_slab_bold"
                        fancy:fb_textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.xieaoze.novawallpaper.widget.FancyButton
                        android:id="@+id/btn_rate"
                        android:layout_width="@dimen/btn_width"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:gravity="right"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        fancy:fb_defaultColor="@color/colorPrimary"
                        fancy:fb_focusColor="#2e5071"
                        fancy:fb_fontIconResource="@string/icon_star"
                        fancy:fb_fontIconSize="30dp"
                        fancy:fb_iconPaddingLeft="15dp"
                        fancy:fb_iconPosition="right"
                        fancy:fb_radius="10dp"
                        fancy:fb_text="@string/rate"
                        fancy:fb_textColor="#ffffff"
                        fancy:fb_textFontRes="@font/roboto_slab_bold"
                        fancy:fb_textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.xieaoze.novawallpaper.widget.FancyButton
                        android:id="@+id/btn_set"
                        android:layout_width="@dimen/btn_width"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="5dp"
                        fancy:fb_defaultColor="@color/colorPrimary"
                        fancy:fb_focusColor="#2e5071"
                        fancy:fb_fontIconResource="@string/icon_config"
                        fancy:fb_fontIconSize="30dp"
                        fancy:fb_iconPaddingLeft="15dp"
                        fancy:fb_iconPosition="right"
                        fancy:fb_radius="10dp"
                        fancy:fb_text="@string/set_default_wallpaper"
                        fancy:fb_textColor="#ffffff"
                        fancy:fb_textFontRes="@font/roboto_slab_bold"
                        fancy:fb_textSize="20sp" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

    </com.multistate.view.MultiStateView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

